# pyhaopenmotics

./: .gitignore  .pre-commit-config.old  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  tox.ini
.devcontainer/: .zshrc  build.sh  devcontainer-extensions.json  devcontainer-lock.json  devcontainer.json  motd
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yaml  ci.yml  codeql.yaml  dependency-review.yaml  linting.yaml  lock.yaml  pr-labels.yaml  pyrefly.yaml  release-drafter.yaml  release.yaml  stale.yaml  tests.yaml  typing.yaml
examples/: cloud_example.py  cloud_example_old.py  local_example.py
script/: check  clean  lint  lint-check  spell  spell-check  test  type-check
script/setup/: bootstrap  setup
src/pyhaopenmotics/: __init__.py  __version__.py  const.py  localgateway.py  openmoticscloud.py
src/pyhaopenmotics/client/: __init__.py  baseclient.py  localgateway.py  openmoticscloud.py  websocket.py
src/pyhaopenmotics/cloud/: energy.py  groupactions.py  inputs.py  installations.py  lights.py  outputs.py  sensors.py  shutters.py  thermostats.py  ventilations.py
src/pyhaopenmotics/cloud/models/: energy.py  groupaction.py  installation.py  light.py  output.py  sensor.py  shutter.py  ventilation.py
src/pyhaopenmotics/helpers/: __init__.py
src/pyhaopenmotics/openmoticsgw/: __init__.py  energy.py  groupactions.py  inputs.py  lights.py  outputs.py  sensors.py  shutters.py  thermostats.py
src/pyhaopenmotics/openmoticsgw/models/: base.py  energy.py  groupaction.py  input.py  light.py  location.py  output.py  sensor.py  shutter.py  thermostat.py
tests/: test_localgateway.py  test_modules.py  test_openmoticscloud.py
