[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "pyhaopenmotics"
description = "Asynchronous Python client for the OpenMotics API."
readme = "README.md"
keywords = [ "api", "async", "client", "homeassistant", "openmotics" ]
license = { text = "AGPLv3" }
maintainers = [ { name = "Wouter Coppens", email = "wouter.coppens@gmail.com" } ]
authors = [ { name = "Wouter Coppens", email = "wouter.coppens@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [ "version" ]
dependencies = [
  "aiohttp>=3.11",
  "mashumaro>=3",
  "orjson>=3.10",
  "stamina>=25",
  "websockets>=15",
  "yarl>=1.18",
]
# optional-dependencies.build = ["hatch"]
# optional-dependencies.dev = [
# "authlib",
# "deptry",
# "hatch",
# "httpx",
# "prek",
# "pyright",
# "pytest",
# "pytest-asyncio",
# "pytest-cov",
# "pytest-mock",
# "python-dotenv",
# "ruff",
# "ty",
# "tox-uv",
# ]
urls.changelog = "https://github.com/rensongroup/pyhaopenmotics/releases"
urls.issues = "https://github.com/rensongroup/pyhaopenmotics/issues"
urls.repository = "https://github.com/rensongroup/pyhaopenmotics"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "tools" },
]
test = [
  "authlib",
  "coverage",
  "httpx",
  "ipdb",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "python-dotenv",
  "ty",
]
docs = [ "mkdocs" ]
lint = [ "pyrefly" ]
tools = [ "ruff", "rust-just" ]

[tool.hatch]
version.path = "src/pyhaopenmotics/__version__.py"

[tool.ruff]
target-version = "py313"
line-length = 130
src = [ "src" ]
format.indent-style = "space"
format.quote-style = "double"
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed !TO BE FIXED!
  "COM812", # trailing comma (formatter conflict)
  "D",      # pydocstyle
  "ERA001", # Found commented-out code
  "ISC001", # string concat (formatter conflict)
  "TID252", # Prefer absolute imports over relative imports from parent modules !TO BE FIXED!
]
lint.per-file-ignores."src/pyhaopenmotics/client/baseclient.py" = [ "C901" ]
lint.per-file-ignores."src/pyhaopenmotics/client/websocket.py" = [
  "FBT001",
  "FBT002",
]
lint.per-file-ignores."src/pyhaopenmotics/openmoticsgw/models/energy.py" = [
  "PLR2004",
]
lint.per-file-ignores."tests/*" = [ "S101" ]
lint.pylint.max-args = 10

[tool.codespell]
write-changes = true

[tool.pytest]
testpaths = [ "tests" ]
pythonpath = [ "src" ]
addopts = [
  "--cov=myproject",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]

[tool.coverage]
run.branch = true
run.source = [ "src/pyhaopenmotics" ]
# report.skip_empty = true
report.exclude_lines = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
]

[tool.pyrefly]
project-includes = [ "src" ]
project-excludes = [ "examples", "tests" ]
infer-with-first-use = false
errors.bad-argument-type = "ignore"
errors.bad-override = "ignore"

# [tool.pyright]
# venvPath = "."
# venv = ".venv"
# include = ["src"]
# exclude = ["examples", "tests"]
# reportArgumentType = false
# reportCallIssue = false
# reportIncompatibleMethodOverride = false

[tool.bandit]
exclude_dirs = [ "tests" ]
# tests = ["B201", "B301"]
skips = [ "B101", "B601" ]
